--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<h1>Nathan Sonnenschein</h1>
+<p>A person with a <em>super</em> basic website.</p>
+
+<h2>About</h2>
+<p>I help fulfill people's information needs as smoothly and efficiently as possible. Currently, I'm academic librarian at Montana State University Billings.</p>
+
+<h2>Connect</h2>
+<p>
+<ul>
+<li><a href="https://twitter.com/nathanlibrarian">Twitter</a></li>
+<li><a href="https://www.linkedin.com/in/nson/">LinkedIn</a></li>
+</ul>
+</p>
+
+<h2>Recommended Video Games</h2>
+<p>
+<ul>
+<li>SimCity 4</li>
+<li>Civilization 4/5/6</li>
+<li>Skyrim</li>
+<li>The Legend of Zelda: Breath of the Wild</li>
+<li>The Talos Principle</li>
+<li>Divinity: Original Sin</li>
+<li>Animal Crossing: New Horizons</li>
+</ul>
+</p>
+
 </body>
 </html>
