--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+<title>Nathan Sonnenschein</title>
+</head>
+
 <body>
 
 <h1>Nathan Sonnenschein</h1>
@@ -26,6 +31,17 @@
 <li>The Talos Principle</li>
 <li>Divinity: Original Sin</li>
 <li>Animal Crossing: New Horizons</li>
+</ul>
+</p>
+
+<h2>Recommended Podcasts</h2>
+<p>
+<ul>
+<li>Nobody Listens to Paula Poundstone</li>
+<li>Critical Role</li>
+<li>No Such Thing as a Fish</li>
+<li>Hit Parade</li>
+<li>The Rewind Project</li>
 </ul>
 </p>
 
