--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+<meta charset="utf-8">
 <title>Nathan Sonnenschein</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="🖕 And it’s really more fucking perfect than the last guy’s.">
 </head>
 
 <body>
+<style>
+/* Grabbed from perfectmotherfuckingwebsite.com with permission (CC0) */
+
+body{max-width:650px;margin:40px auto;padding:0 10px;font:18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";color:#444}h1,h2,h3{line-height:1.2}@media (prefers-color-scheme: dark){body{color:#c9d1d9;background:#0d1117}a:link{color:#58a6ff}a:visited{color:#8e96f0}}
+
+</style>
 
 <h1>Nathan Sonnenschein</h1>
 <p>A person with a <em>super</em> basic website.</p>
@@ -16,6 +25,7 @@
 <h2>Connect</h2>
 <p>
 <ul>
+<li><a href="https://libguides.msubillings.edu/prf.php?account_id=320433">MSU Billings Library</a></li>
 <li><a href="https://twitter.com/nathanlibrarian">Twitter</a></li>
 <li><a href="https://www.linkedin.com/in/nson/">LinkedIn</a></li>
 </ul>
