--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <title>Nathan Sonnenschein</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="🖕 And it’s really more fucking perfect than the last guy’s.">
+<meta name="description" content="Some guy's website. It's pretty boring.">
 </head>
 
 <body>
@@ -17,41 +17,37 @@ body{max-width:650px;margin:40px auto;padding:0 10px;font:18px/1.5 -apple-system
 </style>
 
 <h1>Nathan Sonnenschein</h1>
-<p>A person with a <em>super</em> basic website.</p>
 
-<h2>About</h2>
 <p>I help fulfill people's information needs as smoothly and efficiently as possible. Currently, I'm academic librarian at Montana State University Billings.</p>
+
+<p>In my spare time, I obsess over old buildings, listen to vapid pop music, and stalk thrift stores for glassware that no one else wants.</p>
 
 <h2>Connect</h2>
 <p>
 <ul>
-<li><a href="https://libguides.msubillings.edu/prf.php?account_id=320433">MSU Billings Library</a></li>
-<li><a href="https://twitter.com/nathanlibrarian">Twitter</a></li>
-<li><a href="https://www.linkedin.com/in/nson/">LinkedIn</a></li>
+<a href="https://libguides.msubillings.edu/prf.php?account_id=320433">MSU Billings Library</a> | <a href="https://twitter.com/nathanlibrarian">Twitter</a> | <a href="https://www.linkedin.com/in/nson/">LinkedIn</a>
 </ul>
 </p>
 
-<h2>Recommended Video Games</h2>
+<h2>Game Suggestions</h2>
 <p>
 <ul>
-<li>SimCity 4</li>
-<li>Civilization 4/5/6</li>
-<li>Skyrim</li>
-<li>The Legend of Zelda: Breath of the Wild</li>
-<li>The Talos Principle</li>
-<li>Divinity: Original Sin</li>
-<li>Animal Crossing: New Horizons</li>
+<li><a href="https://www.gog.com/en/game/simcity_4_deluxe_edition">SimCity 4</a> — build a glitchy town</li>
+<li><a href="https://store.2k.com/civilization">Civilization 6</a> — micromanage some colonialism</li>
+<li><a href="https://www.zelda.com/breath-of-the-wild/">The Legend of Zelda: Breath of the Wild</a> — be an adventure twink</li>
+<li><a href="http://www.croteam.com/talosprinciple/">The Talos Principle</a> — feel smart</li>
+<li><a href="http://www.divinityoriginalsin.com/">Divinity: Original Sin</a> — save TIME and SPACE, or something</li>
 </ul>
 </p>
 
-<h2>Recommended Podcasts</h2>
+<h2>Podcasts Suggestions</h2>
 <p>
 <ul>
-<li>Nobody Listens to Paula Poundstone</li>
-<li>Critical Role</li>
-<li>No Such Thing as a Fish</li>
-<li>Hit Parade</li>
-<li>The Rewind Project</li>
+<li><a href="https://paulapoundstone.com/podcast/">Nobody Listens to Paula Poundstone</a> — running jokes for miles</li>
+<li><a href="https://critrole.com/podcast/">Critical Role</a> — nerd crap</li>
+<li><a href="https://www.nosuchthingasafish.com/">No Such Thing as a Fish</a> — posh people spouting facts</li>
+<li><a href="https://slate.com/podcasts/hit-parade">Hit Parade</a> — nerd crap, but it's pop music</li>
+<li><a href="https://www.rewindpod.com/">The Rewind Project</a> — spicy takes on old movies</li>
 </ul>
 </p>
 
