--- a/wedding/index.html
+++ b/wedding/index.html
@@ -7,22 +7,58 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="RSVP for the wedding of Marcus and Nathan.">
 <meta name="robots" content="noindex">
-</head>
 
-<body>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display|Raleway">
 <style>
 /* Grabbed from perfectmotherfuckingwebsite.com with permission (CC0) */
 
 body {
 	max-width: 650px;
 	margin: 40px auto;
-	padding:0 10px;
-	font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	color:#444
+	padding: 0 10px;
+	font: 18px/1.5 Raleway, Arial, sans-serif;
+	color: #444;
+	text-align: left;
 }
 
 h1, h2, h3 {
-	line-height:1.2;
+	line-height: 1.2;
+	font-family: "Playfair Display";
+	margin-top: 1.5em;
+	margin-bottom: 1rem;
+}
+
+h1 {
+	font-size: 76px;
+	margin: 0;
+	border-bottom: 1px solid;
+	text-align: center;
+}
+
+h1.smallh1 {
+	font-size: 33px;
+	text-transform: uppercase;
+	font-weight: 200;
+	margin: 0;
+	border-bottom: none;
+}
+
+h2 {
+	font-size: 48px;
+	font-variant: small-caps;
+}
+
+a.button, a.button:link, a.button:visited {
+	padding: 1em;
+	background-color: gray;
+	color: white;
+	text-decoration: none;
+	display: block;
+	border-radius: 3px;
+}
+
+p.center {
+	text-align: center;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -32,42 +68,44 @@ h1, h2, h3 {
 	}
 
 	a:link {
-		color:#58a6ff;
+		color: #58a6ff;
 	}
 
 	a:visited {
-	color:#8e96f0;
+	color: #8e96f0;
 	}
 }
 
 </style>
+</head>
 
-<h1>The Wedding of Marcus & Nathan</h1>
+<body>
 
-<p>Saturday, May 20<sup>th</sup> at 2PM</p>
+<h1>Marcus & Nathan</h1><h1 class="smallh1">Saturday, May 20, 2023 • Laramie, WY</h1>
 
+<h2>Celebrate with us!</h2>
 <p>St. Paul’s United Church of Christ<br />
-<a href="https://goo.gl/maps/uYqHrPcAkKq9Rtxv8">602 E. Garfield, Laramie, Wyoming</a></p>
+602 E. Garfield, Laramie, Wyoming</p>
 
 <p>A reception will follow in the church’s lower level.</p>
 
-<h2>RSVP</h2>
+<h2>Reservations</h2>
 
-<p>Please RSVP by May 1<sup>st</sup>.</p>
-
-<a href="https://forms.gle/EtRqXVb4juMbCKJR9">RSVP</a>
+<a href="https://forms.gle/EtRqXVb4juMbCKJR9" class="button">RSVP by May 1<sup>st</sup> »</a>
 
 <p>Dress code is as fancy as you like, or whatever you feel best wearing!</p>
 
 <h2>Registry</h2>
 
-Wool dryer balls?
+<a href="" class="button">Wool dryer balls »</a>
 
 <h2>Travel</h2>
 
-<p>Laramie is located on Interstate 80 in southeastern Wyoming. Home to the University of Wyoming is 65 miles north of Fort Collins, Colorado.</p>
+<p>Laramie, home to the University of Wyoming, is located on Interstate 80 in southeastern Wyoming. It is 65 miles north of Fort Collins, Colorado.</p>
 
 <p>The local airport is Laramie Regional Airport. The community's hotels (plenty of decent options!) are concentrated along the interstate corridor.</p>
+
+<p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2996.964858058733!2d-105.5895098!3d41.309628100000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8768901edc1a42b3%3A0x3df594a429421308!2s602%20E%20Garfield%20St%2C%20Laramie%2C%20WY%2082070!5e0!3m2!1sen!2sus!4v1666671416911!5m2!1sen!2sus" width="650" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 
 <h2>Things to Do</h2>
 
