--- a/wedding/index.html
+++ b/wedding/index.html
@@ -93,11 +93,15 @@ p.center {
 
 <a href="https://forms.gle/EtRqXVb4juMbCKJR9" class="button">RSVP by May 1<sup>st</sup> »</a>
 
-<p>Dress code is as fancy as you like, or whatever you feel best wearing!</p>
+<p>Dress code is semi-formal, or whatever you feel best wearing!</p>
 
 <h2>Registry</h2>
 
-<a href="" class="button">Wool dryer balls »</a>
+<p>In lieu of a registry, please consider contributing to our honeymoon fund (cash, check, or Venmo). We appreciate it!</p>
+
+<h2>Our Story</h2>
+
+<p>The two of us met as undergraduates at the University of Wyoming in 2019. We became fast friends through church, then started dating in October of that year. After graduation, we spent a year in a long-distance relationship while Nathan started grad school in Illinois and Marcus pursued a service year in Miami. Marcus moved to Illinois in summer 2020 to live with Nathan, where we weathered the pandemic together. After Nathan graduated in 2022, we moved to Billings, Montana, where Nathan works as a librarian at Montana State University Billings and Marcus works as the Youth Director at First Congregational Church while attending seminary online. After 4 years together, we are so excited to be married.</p>
 
 <h2>Travel</h2>
 
