--- a/wedding/index.html
+++ b/wedding/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Marcus & Nathan | May 20th, 2023</title>
+<title>Marcus & Nathan • May 20th, 2023</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="RSVP for the wedding of Marcus and Nathan.">
 <meta name="robots" content="noindex">
@@ -38,7 +38,7 @@ div#header_text {
 main {
 	max-width: 650px;
 	margin: 0 auto 40px auto;
-	padding: 40px 10px;
+	padding: 40px 20px;
 }
 
 h1, h2, h3 {
@@ -84,7 +84,9 @@ a.button, a.button:link, a.button:visited {
 	background-color: #872508;
 	color: white;
 	text-decoration: none;
-	display: inline-block;
+	display: block;
+	width: max-content;
+	margin: 2em auto;
 	border-radius: 3px;
 	transition-duration: .1s;
 	transition-timing-function: ease-in-out;
@@ -151,13 +153,13 @@ a.locationCard h3, a.locationCard p {
 
 <p class="center">St. Paul’s United Church of Christ<br />602 E. Garfield • Laramie, Wyoming</p>
 
-<p class="center">A light meal will follow in the church’s lower level.</p>
-
-<h2>Reservations</h2>
-
 <a href="https://forms.gle/EtRqXVb4juMbCKJR9" class="button">RSVP by May 1<sup>st</sup> »</a>
 
-<p>Dress code is semi-formal, or whatever you feel best wearing!</p>
+<h2>Ceremony</h2>
+
+<p>Dress code is semi-formal, or whatever you feel best wearing! If you enjoy coordinating, our colors are sky blue and deep red.</p>
+
+<p>A light meal with a taco bar and cake will follow the ceremony in the church’s lower level.</p>
 
 <h2>Registry</h2>
 
