--- a/wedding/index.html
+++ b/wedding/index.html
@@ -79,6 +79,10 @@ img {
 	display: block;
 }
 
+p.center {
+	text-align: center;
+}
+
 a.button, a.button:link, a.button:visited {
 	padding: 1em;
 	background-color: #872508;
@@ -96,8 +100,9 @@ a.button:hover, a.button:active {
 	background-color: #43658c;
 }
 
-p.center {
-	text-align: center;
+iframe {
+	width: 100%;
+	height: 450px;
 }
 
 a.locationCard, a.locationcard:link {
@@ -122,6 +127,16 @@ a.locationCard h3, a.locationCard p {
 	text-decoration: none;
 	color: #444;
 	margin: 0;
+}
+
+@media only screen and (max-width: 600px) {
+
+	h1 {
+		font-size: 48px;
+	}
+	h1.smallh1 {
+		font-size: 24px;
+	}
 }
 
 /** @media (prefers-color-scheme: dark) {
@@ -177,7 +192,7 @@ a.locationCard h3, a.locationCard p {
 
 <p>The local airport is Laramie Regional Airport. The community's hotels (plenty of decent options!) are concentrated along the interstate corridor.</p>
 
-<p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2996.964858058733!2d-105.5895098!3d41.309628100000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8768901edc1a42b3%3A0x3df594a429421308!2s602%20E%20Garfield%20St%2C%20Laramie%2C%20WY%2082070!5e0!3m2!1sen!2sus!4v1666671416911!5m2!1sen!2sus" width="650" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+<p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2996.964858058733!2d-105.5895098!3d41.309628100000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8768901edc1a42b3%3A0x3df594a429421308!2s602%20E%20Garfield%20St%2C%20Laramie%2C%20WY%2082070!5e0!3m2!1sen!2sus!4v1666671416911!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 
 <h2>Things to Do</h2>
 
