More font sizes for mobile

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -133,6 +133,8 @@ a.locationCard h3, a.locationCard p {
 
 	h1 {
 		font-size: 48px;
+		line-height: 1;
+		margin-bottom: 10px;
 	}
 	h1.smallh1 {
 		font-size: 24px;
