Width adjustments and alt text

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -134,7 +134,7 @@ a.locationCard h3, a.locationCard p {
 	h1 {
 		font-size: 48px;
 		line-height: 1;
-		margin-bottom: 10px;
+		margin-bottom: 18px;
 	}
 	h1.smallh1 {
 		font-size: 24px;
@@ -164,7 +164,7 @@ a.locationCard h3, a.locationCard p {
 
 <main>
 
-<img src="photo_square.jpg">
+<img src="photo_square.jpg" alt="Marcus and Nathan kissing while sitting on concrete steps with a tall building behind them">
 
 <h1><span>Nathan</span> & <span>Marcus</span></h1><h1 class="smallh1">Saturday, May 20, 2023 • 1PM</h1>
 
@@ -184,7 +184,7 @@ a.locationCard h3, a.locationCard p {
 
 <h2>Our Story</h2>
 
-<img src="photo_carry_square.jpg">
+<img src="photo_carry_square.jpg" alt="Marcus carrying Nathan on his back with a vibrant orange mural behind them">
 
 <p>The two of us met as undergraduates at the University of Wyoming in 2019. We became fast friends through church, then started dating in October of that year. After graduation, we spent a year in a long-distance relationship while Nathan started grad school in Illinois and Marcus pursued a service year in Miami. Marcus moved to Illinois in summer 2020 to live with Nathan, where we weathered the pandemic together. After Nathan graduated in 2022, we moved to Billings, Montana, where Nathan works as a librarian at Montana State University Billings and Marcus works as the Youth Director at First Congregational Church while attending seminary online. After 4 years together, we are so excited to be married.</p>
 
