--- a/wedding/index.html
+++ b/wedding/index.html
@@ -38,7 +38,7 @@ div#header_text {
 main {
 	max-width: 650px;
 	margin: 0 auto 40px auto;
-	padding: 40px 20px;
+	padding: 20px;
 }
 
 h1, h2, h3 {
