--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ h1, h2, h3 {
 
 <h1>Nathan Sonnenschein</h1>
 
-<p>I help fulfill people's information needs as smoothly and efficiently as possible. Currently, I'm academic librarian at Montana State University Billings.</p>
+<p>I'm a guy who does things, sometimes. I'm an academic librarian during the week and a church pianist on weekends.</p>
 
 <p>In my spare time, I obsess over old buildings, listen to vapid pop music, and stalk thrift stores for glassware that no one else wants.</p>
 
