--- a/index.html
+++ b/index.html
@@ -43,36 +43,32 @@ h1, h2, h3 {
 
 <h1>Nathan Sonnenschein</h1>
 
-<p>I'm a guy who does things, sometimes. I'm an academic librarian during the week and a church pianist on weekends.</p>
-
-<p>In my spare time, I obsess over old buildings, listen to vapid pop music, and stalk thrift stores for glassware that no one else wants.</p>
+<p>I'm a guy who does things, sometimes.</p>
 
 <h2>Connect</h2>
 <p>
+<a href="https://www.linkedin.com/in/nson/">LinkedIn</a> | Bluesky
+</p>
+
+<h2>Top Games</h2>
+<p>
 <ul>
-<a href="https://libguides.msubillings.edu/prf.php?account_id=320433">MSU Billings Library</a> | <a href="https://twitter.com/nathanlibrarian">Twitter</a> | <a href="https://www.linkedin.com/in/nson/">LinkedIn</a>
+<li><a href="https://store.2k.com/civilization">Civilization 6</a></li>
+<li><a href="http://www.divinityoriginalsin.com/">Divinity: Original Sin</a></li>
+<li><a href="https://www.zelda.com/breath-of-the-wild/">The Legend of Zelda: Breath of the Wild</a></li>
+<li><a href="https://www.gog.com/en/game/simcity_4_deluxe_edition">SimCity 4</a></li>
+<li><a href="http://www.croteam.com/talosprinciple/">The Talos Principle</a></li>
 </ul>
 </p>
 
-<h2>Game Suggestions</h2>
+<h2>Top Podcasts</h2>
 <p>
 <ul>
-<li><a href="https://www.gog.com/en/game/simcity_4_deluxe_edition">SimCity 4</a> — build a glitchy town</li>
-<li><a href="https://store.2k.com/civilization">Civilization 6</a> — micromanage some colonialism</li>
-<li><a href="https://www.zelda.com/breath-of-the-wild/">The Legend of Zelda: Breath of the Wild</a> — be an adventure twink</li>
-<li><a href="http://www.croteam.com/talosprinciple/">The Talos Principle</a> — feel smart</li>
-<li><a href="http://www.divinityoriginalsin.com/">Divinity: Original Sin</a> — save TIME and SPACE, or something</li>
-</ul>
-</p>
-
-<h2>Podcasts Suggestions</h2>
-<p>
-<ul>
-<li><a href="https://paulapoundstone.com/podcast/">Nobody Listens to Paula Poundstone</a> — running jokes for miles</li>
-<li><a href="https://critrole.com/podcast/">Critical Role</a> — nerd crap</li>
-<li><a href="https://www.nosuchthingasafish.com/">No Such Thing as a Fish</a> — posh people spouting facts</li>
-<li><a href="https://slate.com/podcasts/hit-parade">Hit Parade</a> — nerd crap, but it's pop music</li>
-<li><a href="https://www.rewindpod.com/">The Rewind Project</a> — spicy takes on old movies</li>
+<li><a href="https://critrole.com/podcast/">Critical Role</a></li>
+<li><a href="https://slate.com/podcasts/hit-parade">Hit Parade</a></li>
+<li><a href="https://www.nosuchthingasafish.com/">No Such Thing as a Fish</a></li>
+<li><a href="https://paulapoundstone.com/podcast/">Nobody Listens to Paula Poundstone</a></li>
+<li><a href="https://www.rewindpod.com/">The Rewind Project</a></li>
 </ul>
 </p>
 
