--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ h1, h2, h3 {
 
 <h1>Nathan Sonnenschein</h1>
 
-<p>I'm a guy who does things, sometimes.</p>
+<p>I'm a guy who does things, sometimes. Stuff like thinking, and eating, and walking. Occasionally I do things that are slightly more exciting. Maybe you know me from those things. If so, then congratulations, you've found my little webpage.</p>
 
 <h2>Connect</h2>
 <p>
