--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ h1, h2, h3 {
 
 <h2>Connect</h2>
 <p>
-<a href="https://www.linkedin.com/in/nson/">LinkedIn</a> | Bluesky
+<ul><a href="https://www.linkedin.com/in/nson/">LinkedIn</a> | <a href="https://bsky.app/profile/sonnenschein.me">Bluesky</a></ul>
 </p>
 
 <h2>Top Games</h2>
